# dtrace.js

./: .eslintignore  .gitignore  .prettierignore  Cargo.toml  LICENSE  README.md  basic_fire.js  browser.js  build.rs  compatibility-test.js  dtrace-provider.ts  dtrace-provider.wasi-browser.js  dtrace-provider.wasi.cjs  final-test.js  index.d.ts  index.js  package-lock.json  package.json  pnpm-lock.yaml  probes.d  probes.manifest.json  simple-test.js  test-dtrace-basic.js
.github/: copilot-instructions.md
__test__/: index.spec.ts
examples/: basic_fire.js  compatibility-test.js  dtrace-test.js  final-test.js  simple-test.js  test-dtrace-basic.js  test-json-probes.js
oldtests/: 32probe-char.test.js  32probe-char_fire.js  32probe.test.js  32probe_fire.js  add-probes.test.js  add-probes_fire.js  args-after-cb-1.test.js  args-after-cb-1_fire.js  args-after-cb-2.test.js  args-after-cb-2_fire.js  bad-probe.test.js  basic.test.js  basic_fire.js  create-destroy.test.js  create-destroy_fire.js  disambiguation.test.js  disambiguation_fire.js  dtrace-test.js  enabled-disabled.test.js  enabled-disabled_fire.js  enabledagain.test.js  enabledagain_fire.js  fewer-args-json.test.js  fewer-args-json_fire.js  fewer-args.test.js  fewer-args_fire.js  gc-provider.test.js  gc-provider_fire.js  gc.js  gc.test.js  gc2.js  gc3.js  gc_fire.js  json-args.test.js  json-args_fire.js  more-args.test.js  more-args_fire.js  multiple-json-args.test.js  multiple-json-args_fire.js  notenabled.test.js  (+4 more)
scripts/: build-probes.mjs  build-probes.mts  emit-manifest.mjs  emit-manifest.mts  napi-build.mts
(+5 files in other folders)
