[package]
authors = ["Johannes Bremer <johannesbremer@example.com>"]
edition = "2021"
name = "dtrace-provider"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "3.0.0", features = ["compat-mode"] }
napi-derive = "3.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# usdt = "0.5"  # Temporarily commented out until we get the API working

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
codegen-units = 1
strip = "symbols"